Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27795

QML Crash with invalid picture address.

    XMLWordPrintable

Details

    Description

      With Qt5 beta1 release version.
      1. Set image element cache = false
      2. Load a picture with invalid address in qml.
      set QML image element.source = invaild picture address, for example "http://www.google.com"
      3. We have 5 pictures to be displayed(other 4 could be valid or invalid), add a button to switch pictures quickly in a loop, when it goes to the invalid source on the screen, the app will crash after several clicks.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            416365416c Alan Alpert
            wingslee Victor Lee
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes