Update SGNode after pixmap is invalidated

If the QDeclarativePixmap on a previously valid Image is cleared, and the
scenegraph updates before the networked pixmap request returns, the
scenegraph can crash when trying to paint a now invalid texture.

Task-number: QTBUG-27795
Change-Id: I83436f846a3e965b324ff6ebf057708fe8c3b82a
Reviewed-by: Alan Alpert <aalpert@rim.com>